--- a/index.html
+++ b/index.html
@@ -395,49 +395,61 @@
                 <div class="row testi-wrap">
                     <div id="testimonial-carousel-2" class="testimonial-carosel-2 owl-carousel">
                         <div class="testi-item">
-                            <p>"Thank you for guiding us through the construction process, understanding, and always ready to accommodate our landing needs."</p>
+                            <p class="text-justify">"Etnochem adalah perubahan besar dalam cara saya mengajar kimia. Siswa saya sekarang lebih bersemangat dan berpartisipasi aktif dalam pembelajaran. Integrasi seni batik dalam pelajaran asam basa memberi pemahaman yang lebih mendalam dan menarik bagi siswa. Saya sangat merekomendasikan Etnochem kepada pengajar lainnya!"</p>
                             <div class="testi-item-inner">
                                 <div class="testi-thumb">
                                     <img src="img/testi-1.jpg" alt="testimonial">
                                 </div>
                                 <div class="testi-info">
-                                    <h3>José Carpio<span>Developer</span></h3>
+                                    <h3>José Carpio<span>Pengajar</span></h3>
                                 </div>
                                 <div class="quote-icon"><i class="fas fa-quote-right"></i></div>
                             </div>
                         </div>
                         <div class="testi-item">
-                            <p>"Thank you for guiding us through the construction process, understanding, and always ready to accommodate our landing needs."</p>
+                            <p class="text-justify">"Etnochem adalah perubahan besar dalam cara saya mengajar kimia. Siswa saya sekarang lebih bersemangat dan berpartisipasi aktif dalam pembelajaran. Integrasi seni batik dalam pelajaran asam basa memberi pemahaman yang lebih mendalam dan menarik bagi siswa. Saya sangat merekomendasikan Etnochem kepada pengajar lainnya!"</p>
                             <div class="testi-item-inner">
                                 <div class="testi-thumb">
                                     <img src="img/testi-2.jpg" alt="testimonial">
                                 </div>
                                 <div class="testi-info">
-                                    <h3>Kyle Frederick<span>Designer</span></h3>
+                                    <h3>Kyle Frederick<span>Pemerhari Budaya</span></h3>
                                 </div>
                                 <div class="quote-icon"><i class="fas fa-quote-right"></i></div>
                             </div>
                         </div>
                         <div class="testi-item">
-                            <p>"Thank you for guiding us through the construction process, understanding, and always ready to accommodate our landing needs."</p>
+                            <p class="text-justify">"Etnochem adalah perubahan besar dalam cara saya mengajar kimia. Siswa saya sekarang lebih bersemangat dan berpartisipasi aktif dalam pembelajaran. Integrasi seni batik dalam pelajaran asam basa memberi pemahaman yang lebih mendalam dan menarik bagi siswa. Saya sangat merekomendasikan Etnochem kepada pengajar lainnya!"</p>
                             <div class="testi-item-inner">
                                 <div class="testi-thumb">
                                     <img src="img/testi-3.jpg" alt="testimonial">
                                 </div>
                                 <div class="testi-info">
-                                    <h3>Melania Rose<span>Marketer</span></h3>
+                                    <h3>Melania Rose<span>Siswa</span></h3>
                                 </div>
                                 <div class="quote-icon"><i class="fas fa-quote-right"></i></div>
                             </div>
                         </div>
                         <div class="testi-item">
-                            <p>"Thank you for guiding us through the construction process, understanding, and always ready to accommodate our landing needs."</p>
+                            <p class="text-justify">"Kami sangat bersyukur memiliki Etnochem sebagai alat pembelajaran di sekolah kami. Ini telah meningkatkan minat siswa dalam belajar kimia dan seni. Kami percaya inisiatif seperti Etnochem mendukung pendidikan holistik yang kami junjung tinggi."</p>
                             <div class="testi-item-inner">
                                 <div class="testi-thumb">
                                     <img src="img/testi-4.jpg" alt="testimonial">
                                 </div>
                                 <div class="testi-info">
-                                    <h3>Michel Brown<span>Designer</span></h3>
+                                    <h3>Sekolah</h3>
+                                </div>
+                                <div class="quote-icon"><i class="fas fa-quote-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="testi-item">
+                            <p class="text-justify">"Etnochem adalah contoh inovasi yang luar biasa dalam pendidikan. Kami sangat mendukung upaya untuk mengintegrasikan budaya lokal dengan pembelajaran akademis. Semoga Etnochem dapat menginspirasi inovasi serupa di seluruh negeri."</p>
+                            <div class="testi-item-inner">
+                                <div class="testi-thumb">
+                                    <img src="img/testi-4.jpg" alt="testimonial">
+                                </div>
+                                <div class="testi-info">
+                                    <h3>Dinas Pendidikan</h3>
                                 </div>
                                 <div class="quote-icon"><i class="fas fa-quote-right"></i></div>
                             </div>
@@ -551,17 +563,18 @@
                     <div class="col-lg-3 col-sm-6 sm-padding">
                         <div class="widget-content">
                             <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
-                            <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
+                            <p>Kami menghadirkan pengalaman belajar yang unik dan menarik dengan fokus pada pembuatan batik khas Malang yaitu batik Malangan menggunakan bahan pewarna alami. Pendekatan STEAM-2C, kami mengintegrasikan ilmu kimia dengan seni batik tradisional.</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-sm-6 sm-padding">
                         <div class="widget-content">
                             <h4>Company</h4>
                             <ul class="widget-links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Clients Reviews</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="./about-us.html">Tentang Kami</a></li>
+                                <li><a href="./services-1.html">Etnochem App</a></li>
+                                <li><a href="./services-2.html">Etnochem Box</a></li>
+                                <li><a href="./faq.html">FAQ's</a></li>
+                                <li><a href="./privacy.html">Kebijakan Privasi</a></li>
                             </ul>
                         </div>
                     </div>
