--- a/about-us.html
+++ b/about-us.html
@@ -71,9 +71,9 @@
                                 <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
                                        <li>
-                                            <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
+                                            <a href="App.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
                                         </li>
-                                       <li><a href="services-2.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
+                                       <li><a href="Kit.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="faq.html">FAQ's</a></li>
@@ -141,22 +141,22 @@
                                 <li class="content-feature-item">
                                     <i class="sb sb-stats color-red"></i>
                                     <div class="content-details">
-                                        <h3>Digital Data Analysis</h3>
-                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                        <h3>Analisis Ide</h3>
+                                        <p>Kit edukasi asam basa berbasis kearifan lokal Malang melalui  pendekatan pembelajaran STEAM-2C dengan dukungan Augmented Reality, sehingga materi lebih mudah dipahami.</p>
                                     </div>
                                 </li>
                                 <li class="content-feature-item">
                                     <i class="sb sb-chart color-green"></i>
                                     <div class="content-details">
-                                        <h3>Marketing Automation</h3>
-                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                        <h3>Strategi Pemasaran</h3>
+                                        <p>Pemasaran usaha “ETNOCHEM” menerapkan marketing mix 4P yang meliputi: product (produk), price (harga), place (tempat), dan promotion (promosi) guna memaksimalkan pemasaran.</p>
                                     </div>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-6 sm-padding wow fadeInRight" data-wow-delay="300ms">
-                        <img src="img/content-1.png" alt="content-img">
+                        <img src="img/Team/all.jpg" alt="content-img">
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                        <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-1.jpg" alt="img">
+                                <img src="img/Team/Pak Candra.png" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
@@ -190,7 +190,7 @@
                        <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-2.jpg" alt="img">
+                                <img src="img/Team/TSALIS.JPG" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
@@ -207,7 +207,7 @@
                        <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-3.jpg" alt="img">
+                                <img src="img/Team/VANES.png" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
@@ -224,7 +224,7 @@
                         <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-4.jpg" alt="img">
+                                <img src="img/Team/LAILI.JPG" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
@@ -241,7 +241,7 @@
                         <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-4.jpg" alt="img">
+                                <img src="img/Team/Lutfia.png" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
@@ -258,7 +258,7 @@
                         <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
-                                <img src="img/team-4.jpg" alt="img">
+                                <img src="img/Team/syiham.jpeg" alt="img">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="ti-facebook"></i></a></li>
                                     <li><a href="#"><i class="ti-twitter"></i></a></li>
