--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                                 <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
                                        <li>
-                                            <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
+                                            <a href="App.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
                                         </li>
-                                       <li><a href="services-2.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
+                                       <li><a href="Kit.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="faq.html">FAQ's</a></li>
