--- a/about-company.html
+++ b/about-company.html
@@ -79,8 +79,8 @@
                                 </li>
                                 <li><a href="#">Services</a> 
                                     <ul>
-                                       <li><a href="services-1.html">Services 01</a></li>
-                                       <li><a href="services-2.html">Services 02</a></li>
+                                       <li><a href="App.html">Services 01</a></li>
+                                       <li><a href="Kit.html">Services 02</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Case Studies</a> 
