--- a/index-2.html
+++ b/index-2.html
@@ -79,8 +79,8 @@
                                 </li>
                                 <li><a href="#">Services</a> 
                                     <ul>
-                                       <li><a href="services-1.html">Aplikasi</a></li>
-                                       <li><a href="services-2.html">Kit Edukasi</a></li>
+                                       <li><a href="App.html">Aplikasi</a></li>
+                                       <li><a href="Kit.html">Kit Edukasi</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Case Studies</a> 
