Artikel first commit

--- a/App.html
+++ b/App.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </section><!--/.content-section-->
-        <section class="service-section padding">
+        <section class="service-section padding bg-grey">
             <div class="container text-center">
                 <h2>Semua Fitur</h2>
                 <span>ETNOCHEM Memiliki Banyak Fitur Unggulan</span>
