--- a/Kit.html
+++ b/Kit.html
@@ -99,9 +99,9 @@
             </div>
 		    <div class="container">
 		        <div class="page-content text-center">
-                    <h4>Our Services</h4>
-		            <h2>Designed For Developers<br>Built For Business.</h2>
-		            <p>Multipurpose Saas Startup HTML Template.</p>
+                    <h4>Perkenalkan</h4>
+		            <h2>Kit Edukasi Asam Basa ETNOCHEM</h2>
+		            <p>Kimia semakin asik dengan kearifan lokal</p>
 		        </div>
 		    </div>
 		</section><!--/. page-header -->
