Artikel second commit

--- a/blog-classic.html
+++ b/blog-classic.html
@@ -131,7 +131,7 @@
             </div>
 		    <div class="container">
 		        <div class="page-content text-center">
-		            <h2>Speciallized news</h2>
+		            <h2>Artikel Etnochem</h2>
 		            <p>Multipurpose Saas Startup HTML Template.</p>
 		        </div>
 		    </div>
@@ -209,7 +209,7 @@
                                 </ul>
                             </div><!--categories-->
                             <div class="widget-content blog-widget">
-                                <h4>Recent Posts</h4>
+                                <h4>Postingan Terbaru</h4>
                                 <ul class="thumb-post">
                                     <li><img src="img/post-1.jpg" alt="post"><a href="#">Minimalist trending in modern architecture 2019</a></li>
                                     <li><img src="img/post-2.jpg" alt="post"><a href="#">Terrace in the town kentaro design workshop.</a></li>
