--- a/blog-single-2.html
+++ b/blog-single-2.html
@@ -62,57 +62,28 @@
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
-                               <li><a data-scroll class="nav-link active" href="index.html">Beranda<span class="sr-only">(current)</span></a> 
+                                <li>
+                                    <a data-scroll href="index.html">Beranda<span class="sr-only">(current)</span></a> 
+                                </li>
+                                <li>
+                                    <a href="about-us.html">Tentang Kami</a> 
+                                </li>
+                                <li>
+                                    <a href="blog-grid.html" class="nav-link active">Artikel</a> 
+                                </li>
+                                <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
-                                       <li><a href="index.html">Beranda Design Studio</a></li>
-                                       <li><a href="index-2.html">Home Web hosting</a></li>
-                                       <li><a href="index-3.html">Home Support Desk</a></li>
-                                       <li><a href="index-4.html">Home Apps Landing</a></li>
-                                       <li><a href="index-5.html">Home Cloud Based Saas</a></li>
+                                        <li>
+                                            <a href="App.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
+                                        </li>
+                                        <li>
+                                        <a href="Kit.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a>
+                                        </li>
                                     </ul>
                                 </li>
-                                <li><a href="#">About</a> 
-                                    <ul>
-                                       <li><a href="about-us.html">About Us</a></li>
-                                       <li><a href="about-company.html">About Company</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Services</a> 
-                                    <ul>
-                                       <li><a href="App.html">Aplikasi</a></li>
-                                       <li><a href="Kit.html">Kit Edukasi</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Case Studies</a> 
-                                    <ul>
-                                       <li><a href="case-studies.html">Case Studies</a></li>
-                                       <li><a href="case-details.html">Case Studies Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Pages</a> 
-                                    <ul>
-                                       <li><a href="job-listing.html">Job Listing</a></li>
-                                       <li><a href="job-details.html">Job Details</a></li>
-                                       <li><a href="team.html">Our Team</a></li>
-                                       <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                       <li><a href="login.html">Login</a></li>
-                                       <li><a href="register.html">Register</a></li>
-                                       <li><a href="faq.html">FAQ's</a></li>
-                                       <li><a href="404.html">404 Error</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Blog</a> 
-                                    <ul>
-                                       <li><a href="blog-grid.html">Blog Grid</a></li>
-                                       <li><a href="blog-classic.html">Blog Classic</a></li>
-                                       <li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
-                       </div>
-                       <div class="header-right">
-                           <div class="cart-icon"><i class="fa fa-shopping-basket"></i><span class="count">0</span></div>
                        </div>
                     </div>
                 </nav>
@@ -131,7 +102,7 @@
             </div>
 		    <div class="container">
 		        <div class="page-content text-center">
-		            <h2>Speciallized news</h2>
+		            <h2>Artikel Etnochem</h2>
 		            <p>Multipurpose Saas Startup HTML Template.</p>
 		        </div>
 		    </div>
@@ -143,7 +114,7 @@
 		            <div class="col-lg-8 padding-15">
 		                <div class="blog-single-wrap">
 		                    <div class="blog-thumb">
-		                        <img src="img/Materi/Picture3.png" alt="img">
+		                        <img src="img/Materi/Artikel 2.png" alt="img">
 		                    </div>
 		                    <div class="blog-single-content">
 		                        <h2><a href="#">Mengapa Harus Belajar Asam-Basa dalam Proses Membatik: Kunci Keberhasilan dalam Seni Berwarna</a></h2>
@@ -167,7 +138,7 @@
                                     <br><b>5. Keberlanjutan dan Ramah Lingkungan</b>
                                     <br>Dalam upaya menjaga keberlanjutan dan ramah lingkungan, pengetahuan tentang asam-basa juga dapat digunakan untuk memilih pewarna yang lebih ramah lingkungan dan aman bagi lingkungan. Pewarna alami yang berasal dari tanaman atau serangga seringkali memanfaatkan sifat asam-basa dalam proses pewarnaan.
                                     <br><b>Penutup</b>
-                                    <br><img src="img/Materi/Picture4.jpg" alt="">
+                                    <br><img src="img/Materi/Artikel 2.2.jpg" alt="">
                                     <br>Belajar tentang konsep asam-basa dalam seni membatik bukan hanya meningkatkan kualitas hasil akhir, tetapi juga membuka peluang eksperimen dan inovasi dalam seni ini. Penggunaan yang tepat dari asam dan basa adalah kunci keberhasilan dalam menciptakan warna-warna yang memukau dan tahan lama pada kain batik. Dengan demikian, pemahaman tentang asam-basa harus dianggap sebagai elemen penting dalam pembelajaran seni membatik yang komprehensif.
                                 </p>
                                 <blockquote>
@@ -201,35 +172,22 @@
                                     <button class="search-btn" type="button"><i class="fa fa-search"></i></button>
                                 </form>
                             </div>
-		                    <div class="widget-content blog-widget">
-                                <h4>Categories</h4>
-                                <ul class="widget-links">
-                                    <li><a href="#">Architecture</a></li>
-                                    <li><a href="#">Interior Design</a></li>
-                                    <li><a href="#">Designing</a></li>
-                                    <li><a href="#">Construction</a></li>
-                                    <li><a href="#">Buildings</a></li>
-                                </ul>
-                            </div><!--categories-->
                             <div class="widget-content blog-widget">
-                                <h4>Recent Posts</h4>
+                                <h4>Postingan Terbaru</h4>
                                 <ul class="thumb-post">
-                                    <li><img src="img/Materi/Picture1.png" alt="post"><a href="blog-single-1.html">Menyingkap Konsep Asam-Basa: Landasan Kimia Dalam Kehidupan Sehari-hari.</a></li>
-                                    <li><img src="img/Materi/Picture3.png" alt="post"><a href="blog-single-2.html">Mengapa Harus Belajar Asam-Basa dalam Proses Membatik: Kunci Keberhasilan dalam Seni Berwarna</a></li>
-                                    <li><img src="img/Materi/Artikel 3.jpg" alt="post"><a href="#">Konsep Asam-Basa dalam Seni Batik: Kesenjangan yang Menarik Antara Ilmu Kimia dan Karya Seni</a></li>
+                                    <li><img src="img/Materi/Artikel 1.png" alt="post"><a href="blog-single-1.html">Menyingkap Konsep Asam-Basa: Landasan Kimia Dalam Kehidupan Sehari-hari.</a></li>
+                                    <li><img src="img/Materi/Artikel 2.png" alt="post"><a href="blog-single-2.html">Mengapa Harus Belajar Asam-Basa dalam Proses Membatik: Kunci Keberhasilan dalam Seni Berwarna</a></li>
+                                    <li><img src="img/Materi/Artikel 3.jpg" alt="post"><a href="blog-single-3.html">Konsep Asam-Basa dalam Seni Batik: Kesenjangan yang Menarik Antara Ilmu Kimia dan Karya Seni</a></li>
                                 </ul>
                             </div><!--tag clouds-->
                             <div class="widget-content blog-widget">
-                                <h4>Tag Clouds</h4>
+                                <h4>Tag</h4>
                                 <ul class="tags">
-                                    <li><a href="#">Architecture</a></li>
-                                    <li><a href="#">Interior Design</a></li>
-                                    <li><a href="#">Designing</a></li>
-                                    <li><a href="#">Construction</a></li>
-                                    <li><a href="#">Buildings</a></li>
-                                    <li><a href="#">Industrial</a></li>
-                                    <li><a href="#">Factory</a></li>
-                                    <li><a href="#">Material</a></li>
+                                    <li><a href="#">Kimia</a></li>
+                                    <li><a href="#">Asam Basa</a></li>
+                                    <li><a href="#">Kearifan Lokal</a></li>
+                                    <li><a href="#">Batik</a></li>
+                                    <li><a href="#">Malang</a></li>
                                 </ul>
                             </div><!--tag clouds-->
 		                </div><!--/.sidebar-wrap-->
@@ -239,62 +197,64 @@
 		</section><!--/.blog-section-->
 		
         <section class="widget-section bg-dark padding">
-           <div class="left-design"></div>
-           <div class="right-design"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-sm-6 sm-padding">
-                        <div class="widget-content">
-                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
-                            <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-sm-6 sm-padding">
-                        <div class="widget-content">
-                            <h4>Company</h4>
-                            <ul class="widget-links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Clients Reviews</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 sm-padding">
-                        <div class="widget-content">
-                            <h4>Headquaters</h4>
-                            <p>962 Fifth Avenue, 3rd Floor New York, NY10022</p>
-                            <span>Hello@dynamiclayers.net</span>
-                            <span>(+123) 456 789 101</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 sm-padding">
-                        <div class="widget-content">
-                            <h4>Newslatter Subscription</h4>
-                            <p>Subscribe and get 10% off from our <br>architecture company.</p>
-                            <div class="subscribe-box clearfix">
-                                <div class="subscribe-form-wrap">
-                                    <form action="#" class="subscribe-form">
-                                        <input type="email" name="email" id="subs-email" class="form-input" placeholder="Enter Your Email Address...">
-                                        <button type="submit" class="submit-btn">Subscribe</button>
-                                        <div id="subscribe-result">
-                                            <p class="subscription-success"></p>
-                                            <p class="subscription-error"></p>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section><!--/.widget-section-->
-        
-		<footer class="footer-section bg-dark align-center">
-			<div class="container">
-				<p>&copy; <script> document.write(new Date().getFullYear())</script> Saasbiz Powered by DynamicLayers</p>
-			</div>
-		</footer><!-- /.footer-section -->
+            <div class="left-design"></div>
+            <div class="right-design"></div>
+             <div class="container">
+                 <div class="row">
+                     <div class="col-lg-3 col-sm-6 sm-padding">
+                         <div class="widget-content">
+                             <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
+                             <p>Kami menghadirkan pengalaman belajar yang unik dan menarik dengan fokus pada pembuatan batik khas Malang yaitu batik Malangan menggunakan bahan pewarna alami. Pendekatan STEAM-2C, kami mengintegrasikan ilmu kimia dengan seni batik tradisional.</p>
+                         </div>
+                     </div>
+                     <div class="col-lg-2 col-sm-6 sm-padding">
+                         <div class="widget-content">
+                             <h4>Company</h4>
+                             <ul class="widget-links">
+                                 <li><a href="./about-us.html">Tentang Kami</a></li>
+                                 <li><a href="./blog-grid.html">Artikkel</a></li>
+                                 <li><a href="./App.html">Etnochem App</a></li>
+                                 <li><a href="./Kit.html">Etnochem Box</a></li>
+                                 <li><a href="./faq.html">FAQ's</a></li>
+                                 <li><a href="./privacy.html">Kebijakan Privasi</a></li>
+                             </ul>
+                         </div>
+                     </div>
+                     <div class="col-lg-3 col-sm-6 sm-padding">
+                         <div class="widget-content">
+                             <h4>Headquaters</h4>
+                             <p>962 Fifth Avenue, 3rd Floor New York, NY10022</p>
+                             <span>Hello@dynamiclayers.net</span>
+                             <span>(+123) 456 789 101</span>
+                         </div>
+                     </div>
+                     <div class="col-lg-4 col-md-6 col-sm-12 sm-padding">
+                         <div class="widget-content">
+                             <h4>Newslatter Subscription</h4>
+                             <p>Subscribe and get 10% off from our <br>architecture company.</p>
+                             <div class="subscribe-box clearfix">
+                                 <div class="subscribe-form-wrap">
+                                     <form action="#" class="subscribe-form">
+                                         <input type="email" name="email" id="subs-email" class="form-input" placeholder="Enter Your Email Address...">
+                                         <button type="submit" class="submit-btn">Subscribe</button>
+                                         <div id="subscribe-result">
+                                             <p class="subscription-success"></p>
+                                             <p class="subscription-error"></p>
+                                         </div>
+                                     </form>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </section><!--/.widget-section-->
+         
+         <footer class="footer-section bg-dark align-center">
+             <div class="container">
+                 <p>&copy; <script> document.write(new Date().getFullYear())</script> Saasbiz Powered by DynamicLayers</p>
+             </div>
+         </footer><!-- /.footer-section -->
 
 		<a data-scroll href="#header" id="scroll-to-top"><i class="arrow_carrot-up"></i></a>
 	
