--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <a href="about-us.html">Tentang Kami</a> 
                                 </li>
                                 <li>
-                                    <a href="blog-single.html">Artikel</a> 
+                                    <a href="blog-grid.html">Artikel</a> 
                                 </li>
                                 <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
@@ -576,8 +576,8 @@
                             <h4>Company</h4>
                             <ul class="widget-links">
                                 <li><a href="./about-us.html">Tentang Kami</a></li>
-                                <li><a href="./services-1.html">Etnochem App</a></li>
-                                <li><a href="./services-2.html">Etnochem Box</a></li>
+                                <li><a href="./App.html">Etnochem App</a></li>
+                                <li><a href="./Kit.html">Etnochem Box</a></li>
                                 <li><a href="./faq.html">FAQ's</a></li>
                                 <li><a href="./privacy.html">Kebijakan Privasi</a></li>
                             </ul>
