--- a/blog-single-1.html
+++ b/blog-single-1.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Multipurpose Saas Startup HTML Template">
         <meta name="author" content="DynamicLayers">
        
-        <title>Etnochem| Multipurpose Saas Startup HTML Template</title>
+        <title>Etnochem| Artikel 1</title>
         
 		<link rel="shortcut icon" type="image/x-icon" href="img/Logo/logo-kotak.png">
 		
